--- a/tearay/tearay-int-test-app/src/main/webapp/index.html
+++ b/tearay/tearay-int-test-app/src/main/webapp/index.html
@@ -10,5 +10,7 @@
 <body onload="main()">
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Material Web Components -->
+    <script type="module">import "https://esm.run/@material/web/all.js";</script>
 </body>
 </html>
