Fix TemplatedProcessor compilation and add validation
- Fixed merge conflicts and syntax errors in `TemplatedProcessor.java`.
- Refactored binding logic to use `querySelectorAll` and switch on `data-field` attributes for efficiency.
- Added compile-time validation using Jsoup to ensure `@DataField` annotated fields exist in the HTML template.
- Added `org.jsoup:jsoup`, `junit`, and `compile-testing` dependencies to `tearay-processor`.
- Added unit tests for `TemplatedProcessor` covering binding generation and error reporting.
- Fixed `DashboardPage.html` to match `DashboardPage.java` `@DataField` requirements.

--- a/tearay/tearay-app/src/main/java/uk/co/instanto/tearay/sample/DashboardPage.html
+++ b/tearay/tearay-app/src/main/java/uk/co/instanto/tearay/sample/DashboardPage.html
@@ -1,6 +1,4 @@
 <div>
     <h1>Dashboard</h1>
-    <div data-field="content"></div>
-    <div data-field="userBtn"></div>
-    <div data-field="backBtn"></div>
+    <div data-field="container"></div>
 </div>
