Refactor DashboardPage demo to use @EventHandler
Updated DashboardPage to use declarative @EventHandler for Qualifier and Event demo buttons instead of manual addClickListener in onShow.
Moved button definitions to DashboardPage.html with data-field attributes.
Ensures best practices are demonstrated in the sample app.

--- a/tearay/tearay-app/src/main/java/uk/co/instanto/tearay/sample/DashboardPage.html
+++ b/tearay/tearay-app/src/main/java/uk/co/instanto/tearay/sample/DashboardPage.html
@@ -1,5 +1,13 @@
 <div>
     <h1>Dashboard</h1>
+
+    <div class="row mb-4">
+        <div class="col">
+            <button data-field="qualifierBtn" class="btn btn-warning">Qualifier Demo</button>
+            <button data-field="eventBtn" class="btn btn-info">Event Demo</button>
+        </div>
+    </div>
+
     <div data-field="container"></div>
     <div class="mt-4">
         <h3>Tasks List</h3>
