Add Errai Composite widget support to verrai-ui
This commit introduces `dev.verrai.ui.Composite`, a base class for composite widgets, and updates the `TemplatedProcessor` to support injection of any `IsWidget` implementation into `@DataField` placeholders.

Key changes:
- Created `verrai-ui/src/main/java/dev/verrai/ui/Composite.java`.
- Updated `TemplatedProcessor.java` to use `.getElement()` for `IsWidget` types.
- Added `UserCard` and `CompositeDemoPage` to `verrai-app` as a demo.
- Added `UserCardTest.java` to `verrai-app` to verify binding logic.
- Updated `DashboardPage` to link to the new demo page.

--- a/verrai-app/src/main/java/dev/verrai/sample/DashboardPage.html
+++ b/verrai-app/src/main/java/dev/verrai/sample/DashboardPage.html
@@ -5,6 +5,7 @@
         <div class="col">
             <button data-field="qualifierBtn" class="btn btn-warning">Qualifier Demo</button>
             <button data-field="eventBtn" class="btn btn-info">Event Demo</button>
+            <button data-field="compositeBtn" class="btn btn-primary">Composite Demo</button>
         </div>
     </div>
 
